fix: resolve 105 medium-priority SonarCloud issues across codebase
Address non-deprecation MAJOR severity issues: rename shadowing local
variables (S1117), use proper assertions (S5785), document empty blocks
(S108), remove commented-out code (S125), remove unused fields (S1068),
replace Guava Optional with java.util.Optional (S4738), use Math.clamp
(S6885), protect abstract constructors (S5993), remove unused params
(S1172), and misc fixes (S6213, S1854, S3415, S3358, S1871, S112).

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>