@@ -1089,7 +1089,7 @@ public class Settings implements ConfigObject {
      * @since 3.11.3
      */
     public void setObsidianScoopingRadius(int obsidianScoopingRadius) {
-        this.obsidianScoopingRadius = Math.max(0, Math.min(15, obsidianScoopingRadius));
+        this.obsidianScoopingRadius = Math.clamp(obsidianScoopingRadius, 0, 15);
     }
 
     /**
